# Poseidon

./: LICENSE  Makefile  Makefile.toml  README.md
kernel/: Cargo.toml
kernel/arch/x86_64/: Makefile  Rules.mk  poseidon.ld
kernel/arch/x86_64/boot/: boot.asm  multiboot2_header.asm  multiboot_header.asm
kernel/src/: lib.rs
kernel/targets/: x86_64-unknown-none.json
scripts/: gen-iso.sh
scripts/x86_64/: build.sh
