[package]
name = "kernel"
version = "0.1.0"
authors = ["Clément Doumergue <clement.doumergue@epitech.eu>", "Benjamin Grange <benjamin.grange@epitech.eu>"]
edition = "2018"

[dependencies]

[lib]
crate-type = ["staticlib"]

# Panic strategies
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.cargo-xbuild]
sysroot_path = "xbuild"
